--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 
 .swiper-button-next:after,
 .swiper-button-prev:after{
-    color: #a8dadc;
+    color: #e2a5a2;
 }
 
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{
