--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,22 @@ html::-webkit-scrollbar{
     display: none;
 }
 
+
 html{
     scrollbar-width: none;
+}
+
+:root{
+  font-size: 16px;
+}
+
+@media only screen and (max-width:768px){
+  :root{
+  font-size: 12px;
+
+}
+}
+
+#mobile i{
+color: aqua;
 }
